feat: ip configuration & logging behind proxy server

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -19,6 +19,7 @@ RUN ls -l /wait_for_map_change.sh
 # run inotify scrip & nginx #
 CMD echo "Waiting for 3s.."; echo "Targeting: $TARGET"; \
      sed -i 's~REPLACE_TARGET~'"$TARGET"'~g' /etc/nginx/nginx.conf; \
+     sed -i 's~TRUSTED_PROXY~'"$TRUSTED_PROXY"'~g' /etc/nginx/nginx.conf; \
      cat /etc/nginx/nginx.conf; \
      sleep 3;\
      nohup /wait_for_map_change.sh & nginx && sleep 100000d
