--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,17 @@ http {
     include /data/blockmap.conf;
 
     server {
+
         listen 8000;
+
+        log_format realip_combined '$http_x_real_ip - $remote_user [$time_local] '
+                                   '"$request" $status $body_bytes_sent '
+                                   '"$http_referer" "$http_user_agent"';
+        access_log /var/log/nginx/access.log realip_combined;
+
+        set_real_ip_from  TRUSTED_PROXY;
+        real_ip_header    X-Forwarded-For;
+        real_ip_recursive on;
 
         location /ip {
             return 200 "Real IP Header: $http_x_real_ip";
